# alma

./: LICENSE
docs/: build_machine.md
python/: client.py  crc8.py  packet.py  server.py
python/server/: server.py
stm32/common/: CMakeLists.txt  crc8.c  crc8.h  main.c  packet.c  packet.h
stm32/nucleo-l152re/: BUILD.md  CMakeLists.txt  main.c  main.h  openocd.cfg  stm32l1xx_hal_conf.h  stm32l1xx_hal_msp.c  stm32l1xx_it.c  stm32l1xx_it.h
